apps/media-stack/overseerr/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: media-stack
spec:
  selector:
    app: overseerr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
  type: ClusterIP
