apps/media-stack/overseerr/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  namespace: media-stack
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: media-stack-https-headers@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - overseerr.torsteinbo.net
      secretName: overseerr-tls
  rules:
    - host: overseerr.torsteinbo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  number: 5055
